--- a/public/dealers.html
+++ b/public/dealers.html
@@ -4,8 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Find TrustCar Approved Dealers — TrustCar.io</title>
-    <meta name="description" content="Find certified TrustCar dealers offering transparent, AI-inspected vehicles. Dealer network launching in 2026 with nationwide coverage.">
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg">
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;600;700;800&display=swap" rel="stylesheet">
     <style>
         * { box-sizing: border-box; }
@@ -48,11 +46,10 @@
         .info-box p { margin: 0; color: #78350f; }
         @media (max-width: 768px) {
             header { flex-wrap: wrap; }
-            nav { width: 100%; display: none; flex-direction: column; gap: 1rem; background: rgba(4, 65, 199, 0.98); padding: 1rem; border-radius: 12px; margin-top: .5rem; box-shadow: 0 4px 12px rgba(0,0,0,0.2); }
+            nav { width: 100%; display: none; flex-direction: column; gap: 1rem; background: rgba(255,255,255,0.08); padding: 1rem; border-radius: 12px; margin-top: .5rem; }
             nav.open { display: flex; }
-            nav a, nav a.nav-link { margin-left: 0; padding: 0.75rem 1rem; min-height: 44px; display: flex; align-items: center; border-radius: 8px; transition: background 0.2s; }
-            nav a:hover, nav a:focus { background: rgba(255,255,255,0.15); }
-            .menu-toggle { display: inline-flex; min-height: 44px; min-width: 44px; } .dealer-grid { grid-template-columns: 1fr; } .search-row { flex-direction: column; } }
+            nav a, nav a.nav-link { margin-left: 0; }
+            .menu-toggle { display: inline-flex; } .dealer-grid { grid-template-columns: 1fr; } .search-row { flex-direction: column; } }
     </style>
 </head>
 <body>
