--- a/public/how-it-works.html
+++ b/public/how-it-works.html
@@ -58,11 +58,10 @@
         
         @media (max-width: 768px) {
             header { flex-wrap: wrap; }
-            nav { width: 100%; display: none; flex-direction: column; gap: 1rem; background: rgba(4, 65, 199, 0.98); padding: 1rem; border-radius: 12px; margin-top: .5rem; box-shadow: 0 4px 12px rgba(0,0,0,0.2); }
+            nav { width: 100%; display: none; flex-direction: column; gap: 1rem; background: rgba(255,255,255,0.08); padding: 1rem; border-radius: 12px; margin-top: .5rem; }
             nav.open { display: flex; }
-            nav a, nav a.nav-link { margin-left: 0; padding: 0.75rem 1rem; min-height: 44px; display: flex; align-items: center; border-radius: 8px; transition: background 0.2s; }
-            nav a:hover, nav a:focus { background: rgba(255,255,255,0.15); }
-            .menu-toggle { display: inline-flex; min-height: 44px; min-width: 44px; } 
+            nav a, nav a.nav-link { margin-left: 0; }
+            .menu-toggle { display: inline-flex; } 
             main { padding: 2rem 4%; }
             h1 { font-size: 2.2rem; }
             .subtitle { font-size: 1rem; }
